Fixed layout issues

--- a/src/ui/popup/style.less
+++ b/src/ui/popup/style.less
@@ -31,14 +31,9 @@ body {
     flex: none;
 }
 
-main {
-    flex: auto;
-    margin-top: @indent-large;
-    position: relative;
-}
-
 .tab-panel {
     flex: auto;
+    margin-top: @indent-large;
 }
 
 footer {
